# G-ForceZero

./: .gitignore  Dockerfile  README.md  colab_training_snippet.txt  get_fen.py  pgn_to_epd.py  sf.in  sf2.in  sf_out.txt  test_breakdown.cpp  test_eval.py  test_eval2.py  test_idx.py  test_legal.py  test_mate.py  test_pawns.py  test_pv.py  test_sf12_eval.py  test_sf_eval.py  test_sf_see
cpp_engine/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  export_fix.py  fix_nnue.patch  get_fen.sh  get_moves.sh  get_sf_eval.py  nnue.cpp  nnue.cpp.orig  nnue_engine  nnue_engine.cpp  nnue_engine_dbg  parse_check  parse_check.cpp  parse_fen  parse_fen.cpp  parse_pgn.py  parse_pgn_11  parse_pgn_11.cpp  parse_pgn_12  parse_pgn_12.cpp  parse_pgn_12_black  parse_pgn_12_black.cpp  parse_pgn_12_black_check  parse_pgn_12_black_check.cpp  parse_pgn_9  parse_pgn_9.cpp  parse_pgn_c  parse_pgn_c.cpp  parse_pgn_c7  parse_pgn_c7.cpp  parse_pgn_pin.cpp  parse_pgn_pin2  parse_pgn_pin2.cpp  parse_pgn_pv  parse_pgn_pv.cpp  parse_sf.sh  patch_qs.sh  (+13 more)
cpp_engine/src/: agent.hpp  main.cpp  mcts.hpp  nnue.hpp  nnue_engine.cpp  polyglot.hpp  polyglot_keys.hpp  selfplay.hpp
cpp_engine/trainer/: generate_keys.py  spsa_tuner.py
cpp_engine_2.0/: CMakeLists.txt  autopilot.py  gforce_engine  rename_exec.py  rename_exec2.py  replace_stockfish.py  strip_nnue.py
cpp_engine_2.0/src/: gforce_engine.cpp  nnue.cpp  nnue.hpp  nnue_engine.cpp  pgn_to_epd.cpp
cpp_engine_2.0/src/eval_backend/: attacks.cpp  attacks.h  benchmark.cpp  benchmark.h  bitboard.cpp  bitboard.h  engine.cpp  engine.h  evaluate.cpp  evaluate.h  history.h  memory.cpp  memory.h  misc.cpp  misc.h  movegen.cpp  movegen.h  movepick.cpp  movepick.h  numa.h  perft.h  position.cpp  position.h  score.cpp  score.h  search.cpp  search.h  shm.h  shm_linux.h  thread.cpp  thread.h  thread_win32_osx.h  timeman.cpp  timeman.h  tt.cpp  tt.h  tune.cpp  tune.h  types.h  uci.cpp  (+3 more)
cpp_engine_2.0/src/eval_backend/nnue/: network.cpp  network.h  nnue_accumulator.cpp  nnue_accumulator.h  nnue_architecture.h  nnue_common.h  nnue_feature_transformer.h  nnue_misc.cpp  nnue_misc.h  nnz_helper.h  simd.h
cpp_engine_2.0/src/eval_backend/nnue/features/: full_threats.cpp  full_threats.h  half_ka_v2_hm.cpp  half_ka_v2_hm.h
cpp_engine_2.0/src/eval_backend/nnue/layers/: affine_transform.h  affine_transform_sparse_input.h  clipped_relu.h  sqr_clipped_relu.h
cpp_engine_2.0/src/eval_backend/syzygy/: tbprobe.cpp  tbprobe.h
cpp_engine_2.0/src/eval_backend/universal/: entry_arm64.cpp  entry_riscv64.cpp  entry_x86.cpp  nnue_embed.cpp
cpp_engine_2.0/src/sf_bridge/: CMakeLists.txt  sf_bridge.cpp
cpp_engine_2.0/trainer/: train_all_chunks.sh  train_halfkp.py
render/: config.yml
